# nikitina_v_o

./: CMakeLists.txt
entry_point/: CMakeLists.txt  main.cpp
lib/: CmakeLists.txt  Doxyfile  object_tracker.cpp  object_tracker.h  structures.h
